crates/ddlog-syntax/tests/parse/fail/unclosed_relation_args.rast
ROOT@0..66
  COMMENT@0..51 "// kind:item validate ..."
  WHITESPACE@51..52 "\n"
  ITEM@52..66
    RELATION_DEF@52..66
      ATTRIBUTES@52..52
      MODIFIERS@52..52
      REL_KW@52..60
        RELATION@52..60 "relation"
      WHITESPACE@60..61 " "
      REL_NAME@61..64
        IDENT@61..64 "Foo"
      REL_COLS@64..65
        L_PAREN@64..65 "("
      WHITESPACE@65..66 "\n"
--
Error: expected ')' but instead the file ends
   ,-[parse/fail/unclosed_relation_args.dl:2:15]
   |
 2 | relation Foo(
   :               | 
   :               `- the file ends here
---'
--
// kind:item validate:false pass:false ignore:false
relation Foo(
